Make sure the labels in the popup list are left aligned.

Bug: 803815
Change-Id: I32dbf0ed1736339f3420d113a1a5a6440c7b8542
Reviewed-on: https://chromium-review.googlesource.com/887243
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Allen Bauer <kylixrd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532420}
Former-commit-id: 36467e7b5b0396c40d11c3abb201471ff93ff757